<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.univlyon1</groupId>
  <artifactId>DQN</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>DQN</name>
  <url>http://maven.apache.org</url>

  <properties>
    <deeplearning4j.version>1.0.0-alpha</deeplearning4j.version>
    <nd4j.version>1.0.0-alpha</nd4j.version>

  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-core -->
    <dependency>
      <groupId>org.deeplearning4j</groupId>
      <artifactId>deeplearning4j-core</artifactId>
      <version>${deeplearning4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-nn -->
    <dependency>
      <groupId>org.deeplearning4j</groupId>
      <artifactId>deeplearning4j-nn</artifactId>
      <version>${deeplearning4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-ui-components -->
    <dependency>
      <groupId>org.deeplearning4j</groupId>
      <artifactId>deeplearning4j-ui-components</artifactId>
      <version>${deeplearning4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.deeplearning4j/deeplearning4j-ui -->
    <dependency>
      <groupId>org.deeplearning4j</groupId>
      <artifactId>deeplearning4j-ui_2.11</artifactId>
      <version>${deeplearning4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-native</artifactId>
      <version>${nd4j.version}</version>
    </dependency>
    <!--<dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-cuda-8.0</artifactId>
      <version>${nd4j.version}</version>
    </dependency>-->
    <dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-native-platform</artifactId>
      <version>${nd4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.nd4j/nd4j-api -->
    <dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-api</artifactId>
      <version>${nd4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.nd4j</groupId>
      <artifactId>nd4j-common</artifactId>
      <version>${nd4j.version}</version>
    </dependency>

  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>
          ../Multi-Agent-Cooperative-Traffic-Simulator/resources</directory>
      </resource>
      <resource>
        <directory>
          ../Multi-Agent-Cooperative-Traffic-Simulator/sim
        </directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
      </plugin>
    </plugins>
  </build>
</project>
